test/interp/spec/call_indirect.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/call_indirect.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/call_indirect.wast:201:38: type mismatch of call_indirect result. got void, expected i32
    (func $type-void-vs-num (i32.eqz (call_indirect 0 (i32.const 0))))
                                     ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:208:37: type mismatch of call_indirect result. got i64, expected i32
    (func $type-num-vs-num (i32.eqz (call_indirect 0 (i32.const 0))))
                                    ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:216:25: too few parameters to function in call_indirect. got 0, expected 1
    (func $arity-0-vs-1 (call_indirect 0 (i32.const 0)))
                        ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:223:25: too few parameters to function in call_indirect. got 0, expected 2
    (func $arity-0-vs-2 (call_indirect 0 (i32.const 0)))
                        ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:230:25: too many parameters to function in call_indirect. got 1, expected 0
    (func $arity-1-vs-0 (call_indirect 0 (i32.const 0) (i32.const 1)))
                        ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:238:7: too many parameters to function in call_indirect. got 2, expected 0
      (call_indirect 0 (i32.const 0) (f64.const 2) (i32.const 1))
      ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:248:7: too many parameters to function in call_indirect. got 3, expected 2
      (call_indirect 0 (i32.const 0) (nop) (i32.const 1) (i32.const 2))
      ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:257:7: too many parameters to function in call_indirect. got 3, expected 2
      (call_indirect 0 (i32.const 0) (i32.const 1) (nop) (i32.const 2))
      ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:266:7: too many parameters to function in call_indirect. got 3, expected 2
      (call_indirect 0 (i32.const 0) (i32.const 1) (i32.const 2) (nop))
      ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:275:51: type mismatch in nop. got void, expected i32
    (func $type-func-void-vs-i32 (call_indirect 0 (nop) (i32.const 1)))
                                                  ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:282:50: type mismatch of function index. got i64, expected i32
    (func $type-func-num-vs-i32 (call_indirect 0 (i64.const 1) (i32.const 0)))
                                                 ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:291:38: type mismatch in nop. got void, expected i32
      (call_indirect 0 (i32.const 0) (nop) (i32.const 1))
                                     ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:300:52: type mismatch in nop. got void, expected i32
      (call_indirect 0 (i32.const 0) (i32.const 1) (nop))
                                                   ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:309:38: type mismatch of argument 0 of call_indirect. got f64, expected i32
      (call_indirect 0 (i32.const 0) (f64.const 1) (i32.const 1))
                                     ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:309:52: type mismatch of argument 1 of call_indirect. got i32, expected f64
      (call_indirect 0 (i32.const 0) (f64.const 1) (i32.const 1))
                                                   ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:318:38: type mismatch of argument 0 of call_indirect. got i32, expected f64
      (call_indirect 0 (i32.const 0) (i32.const 1) (f64.const 1))
                                     ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:318:52: type mismatch of argument 1 of call_indirect. got f64, expected i32
      (call_indirect 0 (i32.const 0) (i32.const 1) (f64.const 1))
                                                   ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:328:46: function type variable out of range (max 0)
  (module (func $unbound-type (call_indirect 1 (i32.const 0))))
                                             ^
assert_invalid error:
  third_party/testsuite/call_indirect.wast:332:44: function type variable out of range (max 0)
  (module (func $large-type (call_indirect 10001232130000 (i32.const 0))))
                                           ^^^^^^^^^^^^^^
41/41 tests passed.
;;; STDOUT ;;)
